Update and rename phags-pa-typer.html to typer.html

--- a/typer.html
+++ b/typer.html
@@ -123,9 +123,13 @@ var conversion = {
     </script>
     
 <style>
+body, table {
+  font-family: Arial;
+  font-size: 15pt;
+}
 table {
   border-collapse: collapse;
-  width: 70%;
+  width: 80%;
 }
 td, th {
   border: 1px solid #AAA;
@@ -133,7 +137,7 @@ td, th {
   padding: 1px;
 }
 textarea {
-	font-size: 13pt;
+	font-size: 15pt;
 	font-family: Arial;
     width: 96%;
 } 
