--- a/typer.html
+++ b/typer.html
@@ -190,7 +190,7 @@ oninput="onInputTextChange(this.value)"></textarea>
 </td>
 <td>
 <center>
-<div style="overflow-y: scroll; height:200px; width:200px">
+<div style="overflow-y: scroll; height:250px;">
 
 <table>
 <thead>
