--- a/typer.html
+++ b/typer.html
@@ -9,9 +9,9 @@
 
      
 var conversion = {
-"k": "ꡀ", //A842 
-"kh": "ꡁ", //A840
-"g": "ꡂ", //A841
+"k": "ꡀ", //A840 
+"kh": "ꡁ", //A841
+"g": "ꡂ", //A842
 "ng": "ꡃ", //A843
 "c": "ꡄ", //A844
 "ch": "ꡅ", //A845
@@ -204,17 +204,17 @@ oninput="onInputTextChange(this.value)"></textarea>
 <tr>
 <td>k</td>
 <td>ꡀ</td>
-<td>A842 </td>
+<td>A840</td>
 </tr>
 <tr>
 <td>kh</td>
 <td>ꡁ</td>
-<td>A840</td>
+<td>A841</td>
 </tr>
 <tr>
 <td>g</td>
 <td>ꡂ</td>
-<td>A841</td>
+<td>A842</td>
 </tr>
 <tr>
 <td>ng</td>
@@ -497,7 +497,7 @@ oninput="onInputTextChange(this.value)"></textarea>
 </tr>
 </tbody>
 </table>
-	
+<br>Unicode: [https://www.unicode.org/charts/PDF/UA840.pdf](https://www.unicode.org/charts/PDF/UA840.pdf)
 </center>
 
 
