--- a/typer.html
+++ b/typer.html
@@ -497,7 +497,7 @@ oninput="onInputTextChange(this.value)"></textarea>
 </tr>
 </tbody>
 </table>
-<br>Unicode: [https://www.unicode.org/charts/PDF/UA840.pdf](https://www.unicode.org/charts/PDF/UA840.pdf)
+	<br><p>unicode: <a href="https://www.unicode.org/charts/PDF/UA840.pdf">https://www.unicode.org/charts/PDF/UA840.pdf</a></p>
 </center>
 
 
